--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.fs-14 {
+  font-size: 14px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fs-16 {
+  font-size: 16px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fs-17 {
+  font-size: 17px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.fs-18 {
+  font-size: 18px;
 }
-
-.App-link {
-  color: #61dafb;
+.fs-20 {
+  font-size: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fw-500 {
+  font-weight: 500;
+}
+.text_black {
+  color: black;
+}
+.text_grey {
+  color: rgb(117 88 88);
+}
+.images_grid {
+  display: grid;
+  column-gap: 40px;
+  row-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+}
+.bg_gradient {
+  background-image: linear-gradient(90deg, #0b203d, #459c87 99.36%);
 }
